add arguments for jUDDI server name and port